# notamify-mcp

./: .gitignore  LICENSE  README.md  notamify_server.py  pyproject.toml  requirements.txt
