[project]
name = "notamify-mcp"
version = "0.1.0"
description = "MCP server for Notamify API - Access NOTAMs (Notice to Airmen) data"
authors = [
    { name = "Damian Szumski", email = "damian@notamify.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "python-dotenv>=1.0.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[project.urls]
Homepage = "https://github.com/skymerse/notamify-mcp"
Repository = "https://github.com/skymerse/notamify-mcp"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"] 
